# quantforge

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml
benchmark_results/baselines/: post-optimization.jsonl  pre-optimization.jsonl
config/: README.md  example.yaml  pipeline.yaml  settings.py  thesis_demo.yaml  thesis_demo_momentum.yaml
config/hpo/: adaptive_bollinger.yaml  cross_asset_momentum.yaml  momentum_gatekeeper.yaml  pairs_trading.yaml  return_forecast.yaml  volatility_targeting.yaml
config/models/: spy_directional_classifier.yaml  spy_hybrid_return.yaml  spy_hybrid_volatility.yaml
config/regimes/: bull_bear_200ma.yaml  covid_split.yaml  vol_quintile.yaml
config/strategies/: adaptive_bollinger.yaml  cross_asset_momentum.yaml  cross_asset_momentum_pretrained.yaml  momentum_gatekeeper.yaml  momentum_gatekeeper_pretrained.yaml  pairs_trading.yaml  return_forecast.yaml  return_forecast_pretrained.yaml  volatility_targeting.yaml  volatility_targeting_pretrained.yaml
config/study/: README.md  main_study.yaml  pairs_extension.yaml  sandbox.yaml  sandbox2.yaml
config/universes/: README.md  aapl_daily_10y.yaml  aapl_daily_5y.yaml  amzn_daily_10y.yaml  amzn_daily_5y.yaml  cross_asset_daily_10y.yaml  cross_asset_daily_5y.yaml  dia_daily_5y.yaml  eurusd_daily_5y.yaml  gld_daily_10y.yaml  gld_daily_5y.yaml  gld_slv_daily_5y.yaml  googl_daily_10y.yaml  googl_daily_5y.yaml  ivv_voo_daily_10y.yaml  ivv_voo_daily_5y.yaml  iwm_daily_5y.yaml  jpm_daily_10y.yaml  jpm_daily_5y.yaml  ko_daily_10y.yaml  ko_daily_5y.yaml  megacap_tech_daily_10y.yaml  megacap_tech_daily_5y.yaml  meta_daily_10y.yaml  meta_daily_5y.yaml  msft_daily_10y.yaml  msft_daily_5y.yaml  pairs_gld_slv.yaml  qqq_daily_10y.yaml  qqq_daily_5y.yaml  spy_daily_10y.yaml  spy_daily_2008.yaml  spy_daily_5y.yaml  spy_daily_covid.yaml  tsla_daily_10y.yaml  tsla_daily_5y.yaml  v_ma_daily_10y.yaml
cpp/: CMakeLists.txt  README.md
cpp/benchmarks/: CMakeLists.txt  bench_adaptive_bollinger_strategy.cpp  bench_backtest.cpp  bench_garch_filter.cpp  bench_indicators.cpp  bench_metrics.cpp  bench_pairs_trading_strategy.cpp  bench_spread.cpp  bench_state_machines.cpp
cpp/benchmarks/detail/: measure.hpp  random.hpp
cpp/bindings/: python_module.cpp
cpp/include/quant/benchmark/: cycle_counter.hpp
cpp/include/quant/core/: time_series.hpp  types.hpp  validation.hpp
cpp/include/quant/engine/: backtest_engine.hpp  slippage.hpp
cpp/include/quant/filters/: garch_filter.hpp
cpp/include/quant/indicators/: bollinger_bands.hpp  garman_klass.hpp  interface.hpp  macd.hpp  parkinson.hpp  rsi.hpp  volatility_estimator.hpp
cpp/include/quant/indicators/detail/: constants.hpp  rolling.hpp  volatility_utils.hpp
cpp/include/quant/metrics/: performance.hpp
cpp/include/quant/statistics/: spread.hpp
cpp/include/quant/strategies/: adaptive_bollinger.hpp  interface.hpp  pairs_trading.hpp  state_machines.hpp
cpp/src/benchmark/: cycle_counter.cpp
cpp/src/core/: types.cpp
cpp/src/engine/: backtest_engine.cpp
cpp/src/filters/: garch_filter.cpp
cpp/src/indicators/: bollinger_bands.cpp  garman_klass.cpp  macd.cpp  parkinson.cpp  rsi.cpp
cpp/src/metrics/: performance.cpp
cpp/src/statistics/: spread.cpp
cpp/src/strategies/: adaptive_bollinger.cpp  pairs_trading.cpp  state_machines.cpp
cpp/tests/: CMakeLists.txt  test_adaptive_bollinger_strategy.cpp  test_backtest_engine.cpp  test_bollinger_rolling_mean_std_parity.cpp  test_buffer_reuse_overloads.cpp  test_core.cpp  test_cycle_counter.cpp  test_garch_filter.cpp  test_indicators.cpp  test_macd_fused_parity.cpp  test_metrics.cpp  test_metrics_fused_parity.cpp  test_pairs_trading_strategy.cpp  test_spread.cpp  test_spread_welford_zscore_parity.cpp  test_state_machines.cpp  test_time_series_slice_view.cpp
cpp/tests/detail/: macd_reference.hpp  metrics_reference.hpp  parity_helpers.hpp  spread_reference.hpp
experiment_results/thesis_demo/: README.md
scripts/: README.md  _attribution.py  backfill_artifact_owners.py  backfill_save_markers.py  benchmark.py  check_ci_deps.py  check_constants_sync.py  check_leaf_keys_consistent.py  check_openapi_snapshot.py  check_readme_test_counts.py  check_webapp_deps.py  check_webapp_schema_mirror.py  create_user.py  deploy.py  dump_openapi.py  experiment.py  manage_users.py  plot_xgb_gain.py  regen_spy_fixture.py  regen_stubs.py  study.py  validate_cam_baskets.py  validate_pairs_candidates.py
src/analysis/: README.md  __init__.py  baselines.py  feature_importance.py  metrics_aggregator.py  ranking.py  regime_split.py  signal_evaluation.py  significance.py
src/benchmarking/: README.md  __init__.py  analyzer.py  comparator.py  reporter.py  runner.py  store.py  types.py
src/core/: README.md  config.py  config_loader.py  config_overrides.py  constants.py  contracts.py  device.py  exceptions.py  fs.py  hpo_config.py  json_io.py  leaf_keys.py  logging.py  persistence.py  regime_config.py  registry.py  seeding.py  temporal.py  types.py  utils.py
src/data/: README.md  __init__.py  cache.py  csv_source.py  fingerprint.py  interface.py  live_fetcher.py  loader.py  local_file_source.py  normalizer.py  parquet_source.py  validator.py
src/engine/: README.md  __init__.py  cpp_engine.py  interface.py  scenarios.py  walk_forward.py
src/features/: README.md  __init__.py  interface.py  pipeline.py
src/models/: README.md  __init__.py  _garch_cache.py  _hybrid_warmup.py  arma.py  cointegration.py  dataset.py  garch.py  hybrid_return.py  hybrid_volatility.py  interface.py  lstm.py  xgboost_classifier.py
src/optimization/: README.md  checkpointing.py  dsr.py  importance.py  objectives.py  pruners.py  samplers.py  sampling.py  tuner.py
src/orchestration/: README.md  builder.py  clean.py  comparison.py  deployment.py  experiment.py  git_info.py  holdout_eval.py  manifest.py  model_artifact.py  pretrained_leaves.py  regime.py  regime_run.py  run_loader.py  standalone_training.py  study.py  study_report.py  (+2 more)
tests/: _strategy_stubs.py  conftest.py
webapp/: README.md
(+485 files in other folders)
