[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "quant-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic==2.13.3",
    "pyyaml>=6.0",
    "torch>=2.2",
    "xgboost>=2.0",
    "arch>=7.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "optuna>=3.5",
    "scipy>=1.12",
    "pmdarima>=2.0",
    "matplotlib>=3.8",
    "yfinance>=0.2",
    "pandas-market-calendars>=4.0",
    "click>=8.1",
    "psutil>=5.9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "pandas-stubs",
    "types-PyYAML",
    "types-psutil",
    "types-tqdm",
    "pybind11-stubgen",
    "ruff>=0.3",
]
webapp = [
    "fastapi==0.136.1",
    "starlette==1.0.0",
    "pydantic-settings==2.14.0",
    "uvicorn[standard]>=0.32",
    "bcrypt==5.0.0",
    "itsdangerous==2.2.0",
    "slowapi==0.1.9",
    "httpx==0.28.1",
]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.source-dir = "cpp"
wheel.packages = ["src/quant_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    # FastAPI internals still reference starlette.HTTP_422_UNPROCESSABLE_ENTITY
    # when handling Pydantic validation errors; not actionable from our code.
    "ignore:'HTTP_422_UNPROCESSABLE_ENTITY' is deprecated.*:DeprecationWarning:fastapi.routing",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
